--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "aos": "^2.3.4",
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
