Added vercel ai sdk, lucid, zod

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "ai": "^3.3.28",
     "aos": "^2.3.4",
     "aws-sdk": "^2.1690.0",
+    "axios": "^1.7.7",
+    "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
